# agentic-vs-chat-2

./: .gitignore  README.md  compose.yaml  pyproject.toml
logs/: 2026-03-21T20-49-08-00-00_bare-chat_7q97xdBNzn6BKEjtxAgaPd.eval  2026-03-21T20-49-25-00-00_bare-chat_7q97xdBNzn6BKEjtxAgaPd.eval  2026-03-21T21-09-40-00-00_system-prompt-and-tools_97XkEozmAtFcuzMpj64fqt.eval  2026-03-21T21-09-40-00-00_tools-only_2BRKEwwVVtpQG8pwUF7xmF.eval  2026-03-21T21-09-50-00-00_tools-only_ChK9CHozDpdJAqTJPNtMii.eval  2026-03-21T21-09-53-00-00_system-prompt-and-tools_cKh9gv7uiQMZStwZ4UMfRT.eval  2026-03-21T21-09-59-00-00_system-prompt-and-tools_i5QNy6YLZriVbSkh6QGGNr.eval  2026-03-21T21-10-04-00-00_tools-only_fgzqzSN8uUBZPM7U6pwQd5.eval  2026-03-21T21-10-11-00-00_tools-only_NMH2NaMbek5v5jMNsU5sgZ.eval  2026-03-21T21-10-14-00-00_system-prompt-and-tools_kxUjNyemDYUmPkPAK6uCrt.eval  2026-03-21T21-10-21-00-00_system-prompt-and-tools_nMrFyg6GmewQk57Jckc7jx.eval  2026-03-21T21-10-25-00-00_tools-only_oEMLfS7BTdRgRaoZEBpznJ.eval  2026-03-21T21-10-32-00-00_tools-only_RTnBe96NFBPL4BcdFJnJhT.eval  2026-03-21T21-10-34-00-00_system-prompt-and-tools_QsKRKkACGZDXLosH9XgvSx.eval  2026-03-21T21-14-33-00-00_tools-only_2BRKEwwVVtpQG8pwUF7xmF.eval  2026-03-21T21-14-38-00-00_tools-only_ChK9CHozDpdJAqTJPNtMii.eval  2026-03-21T21-14-49-00-00_tools-only_fgzqzSN8uUBZPM7U6pwQd5.eval  2026-03-21T21-14-58-00-00_tools-only_NMH2NaMbek5v5jMNsU5sgZ.eval  2026-03-21T21-15-09-00-00_tools-only_oEMLfS7BTdRgRaoZEBpznJ.eval  2026-03-21T21-15-20-00-00_tools-only_RTnBe96NFBPL4BcdFJnJhT.eval
sandbox/: config.json  data.csv  (+1 more)
(+153 files in other folders)
